--- a/package.json
+++ b/package.json
@@ -7,25 +7,17 @@
   "license": "Apache-2.0",
   "sideEffects": false,
   "private": false,
+  "scripts": {
+    "compile:fetch": "curl https://raw.githubusercontent.com/sourcegraph/scip/main/scip.proto > scip.proto",
+    "compile:js": "pbjs -t static-module -o scip.js -w commonjs scip.proto",
+    "compile:ts": "pbts -o scip.d.ts scip.js",
+    "compile": "npm run compile:fetch && npm run compile:js && npm run compile:ts"
+  },
+  "main": "./scip",
   "dependencies": {
-    "google-protobuf": "^3.20.1"
+    "protobufjs": "^7.3.2"
   },
   "devDependencies": {
-    "@types/google-protobuf": "3.15.6",
-    "protoc-gen-ts": "0.8.6",
-    "typescript": "^4.9.0"
-  },
-  "comment": [
-    "protoc-gen-ts is pinned to 0.8.1 because there is a breaking change in                       ",
-    "0.8.2 which causes a crash when generating output:                                           ",
-    "                                                                                             ",
-    "const { major = 0, minor = 0, patch = 0 } = request.compiler_version;                        ",
-    "        ^                                                                                    ",
-    "TypeError: Cannot read property 'major' of undefined                                         ",
-    " at Object.<anonymous> (/Users/varun/Code/scip/node_modules/protoc-gen-ts/src/index.js:60:13)",
-    " at Module._compile (node:internal/modules/cjs/loader:1101:14)                               ",
-    "                                                                                             ",
-    "We ran into this with https://github.com/sourcegraph/scip/pull/1                             "
-  ],
-  "main": "./scip"
+    "protobufjs-cli": "^1.1.2"
+  }
 }
