--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@sourcegraph/scip",
+  "name": "@c4312/scip",
   "version": "0.1.0",
   "description": "Generated TypeScript definitions for the Semantic Code Intelligence Protocol.",
   "repository": "https://github.com/sourcegraph/scip/bindings/typescript",
